# team_4

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  RULES.md  TEAM.md  docker-compose.yml  render.yaml
.claude/templates/: README.md  settings-backend.json  settings-cib.json  settings-retail.json
.codex/templates/: README.md  config-backend.toml  config-cib.toml  config-retail.toml
.github/workflows/: deploy-render.yml
backend/: CONTRACT.md  Dockerfile  pyproject.toml
backend/src/: main.py
cib/: CONTRACT.md  Dockerfile  pyproject.toml
cib/src/: llm.py  main.py
retail/: CONTRACT.md  Dockerfile  pyproject.toml
retail/src/: main.py
retail/src/static/: index.html
seed/: README.md  clients.jsonl  credit_history.jsonl  make_seed.py  transactions.jsonl
tasks/: task_01.md
tools/: cowork-onboard.py  unstick-locks.cmd
tools/bootstrap/: README.md  raif-workshop-setup.applescript  raif-workshop-setup.cmd
