[project]
name = "raif-cib"
version = "1.0.0"
description = "Блок cib — корпоратив и бизнес-логика банка команды"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
